# image-explorer

./: .gitignore  README.md  biome.jsonc  bun-env.d.ts  package.json  tsconfig.json
embedding-server/: README.md  pyproject.toml  server.py
src/: App.tsx  config.json  config.ts  dashboard.html  db.ts  embed.ts  embeddings.ts  fetchTextEmbedding.ts  frontend.tsx  generateEmbeddingFromSeed.ts  generateSeededEmbedding.ts  index.ts  path-extrapolator.ts  queries.ts  types.ts  useImages.ts  useInfiniteScroll.tsx  useShowBackToTop.tsx  vector.ts
src/frontend/: App.tsx  dashboard.html  frontend.tsx  useImages.ts  utils.ts
src/shared/: utils.ts
